# tauri-plugin-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
crates/tauri-mcp-server/: Cargo.toml
crates/tauri-mcp-server/src/: main.rs
crates/tauri-plugin-mcp/: Cargo.toml
crates/tauri-plugin-mcp/permissions/: default.toml
crates/tauri-plugin-mcp/permissions/autogenerated/: reference.md
crates/tauri-plugin-mcp/permissions/schemas/: schema.json
crates/tauri-plugin-mcp/src/: debug_server.rs  lib.rs  protocol.rs
crates/tauri-plugin-mcp/src/commands/: input.rs  screenshot.rs  snapshot.rs
permissions/autogenerated/commands/: eval_result.toml
src/: debug_server.rs  lib.rs
src/commands/: mod.rs  navigation.rs  screenshot.rs  script.rs
