[package]
name = "tauri-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP server for Tauri test automation"
keywords = ["tauri", "mcp", "automation", "testing", "server"]
categories = ["development-tools::testing"]

[[bin]]
name = "tauri-mcp-server"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
interprocess = { version = "2", features = ["tokio"] }
toml = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
